# serializer version: 1
# name: test_fan_out_golden
  '''
  """Generated by Emergent Flow. Do not edit by hand."""
  
  import emergentflow as ef
  
  
  def main() -> dict[str, object]:
      load_csv_frame = ef.data.load_csv(
          "sample.csv",
          encoding="utf-8",
          source_file=False,
          connection=None,
          expect_columns=None,
          expect_dtypes=None,
      )
      impute_missing_frame = ef.clean.impute_missing(load_csv_frame, strategy="median", columns=None)
      anova_result = ef.stats.anova(
          impute_missing_frame, group_col="cohort", value_col="score", alpha=0.05
      )
      html_summary_html = ef.reports.generate_html_summary(
          impute_missing_frame, title="Emergent Flow — Vertical Slice"
      )
      train_classifier_result = ef.ml.train_classifier(
          impute_missing_frame,
          target="converted",
          features=["age", "spend", "score"],
          test_size=0.25,
          random_state=0,
      )
      return {
          "anova_result": anova_result,
          "html_summary_html": html_summary_html,
          "train_classifier_result": train_classifier_result,
      }
  
  
  if __name__ == "__main__":
      _results = main()
      for _name, _value in _results.items():
          print(f"{_name} = {_value!r}")
  
  '''
# ---
# name: test_linear_chain_golden
  '''
  """Generated by Emergent Flow. Do not edit by hand."""
  
  import emergentflow as ef
  
  
  def main() -> dict[str, object]:
      load_csv_frame = ef.data.load_csv(
          "examples/vertical_slice/sample.csv",
          encoding="utf-8",
          source_file=False,
          connection=None,
          expect_columns=None,
          expect_dtypes=None,
      )
      impute_missing_frame = ef.clean.impute_missing(load_csv_frame, strategy="median", columns=None)
      anova_result = ef.stats.anova(
          impute_missing_frame, group_col="cohort", value_col="score", alpha=0.05
      )
      return {"anova_result": anova_result}
  
  
  if __name__ == "__main__":
      _results = main()
      for _name, _value in _results.items():
          print(f"{_name} = {_value!r}")
  
  '''
# ---
